--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/gesits.jpg" class="image fit thumb"><img src="images/thumbs/gesits.jpg" alt="" /></a>
 								<h3>Gesits (Garuda Indonesia)</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Garuda Fleet Lease Managemet.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/eproc.jpg" class="image fit thumb"><img src="images/thumbs/eproc.jpg" alt="" /></a>
